--- a/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast-detail/tenant-cast-detail.component.html
+++ b/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast-detail/tenant-cast-detail.component.html
@@ -196,7 +196,7 @@
         <app-dashboard-textarea
           formControlName="message"
           name="message"
-        >メッセージ
+        >店長からのコメント
         </app-dashboard-textarea>
         <app-dashboard-select
           [selects]="useSelects"
