--- a/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast-create/tenant-cast-create.component.html
+++ b/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast-create/tenant-cast-create.component.html
@@ -206,7 +206,7 @@
       <app-dashboard-textarea
         formControlName="message"
         name="message"
-      >メッセージ
+      >店長からのコメント
       </app-dashboard-textarea>
       <app-dashboard-select
         [selects]="useSelects"
