800x800バナー対応

--- a/src/app/modules/operation/components/operation-tenant-banner-image/operation-tenant-banner-image.component.html
+++ b/src/app/modules/operation/components/operation-tenant-banner-image/operation-tenant-banner-image.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-label>バナー画像</mat-label>
+  <mat-label><ng-content></ng-content></mat-label>
   <div class="rows-container">
     <div class="row-container">
       <div class="row">
