--- a/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
+++ b/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
@@ -143,7 +143,10 @@
       </p>
       <app-operation-tenant-banner-image
         formControlName="image"
-      ></app-operation-tenant-banner-image>
+      >店舗TOPバナー</app-operation-tenant-banner-image>
+      <app-operation-tenant-banner-image
+        formControlName="square_image"
+      >店舗800x800バナー</app-operation-tenant-banner-image>
       <app-dashboard-input formControlName="official_site_url">オフィシャルサイトURL</app-dashboard-input>
     </mat-card-content>
     <mat-card-actions align="end">
