--- a/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
+++ b/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
@@ -151,7 +151,13 @@
           [galleries]="detail.free_galleries"
           [foreignLinks]="detail.foreign_links"
           [casts]="detail.casts"
-        ></app-operation-tenant-banner-image>
+        >店舗TOPバナー</app-operation-tenant-banner-image>
+        <app-operation-tenant-banner-image
+          formControlName="square_image"
+          [galleries]="detail.free_galleries"
+          [foreignLinks]="detail.foreign_links"
+          [casts]="detail.casts"
+        >店舗800x800バナー</app-operation-tenant-banner-image>
         <app-dashboard-input formControlName="official_site_url">オフィシャルサイトURL</app-dashboard-input>
       </mat-card-content>
       <mat-card-actions align="end">
