--- a/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
+++ b/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
@@ -159,6 +159,7 @@
           [casts]="detail.casts"
         >店舗800x800バナー</app-operation-tenant-banner-image>
         <app-dashboard-input formControlName="official_site_url">オフィシャルサイトURL</app-dashboard-input>
+        <app-dashboard-input formControlName="payment_url">決済用URL</app-dashboard-input>
       </mat-card-content>
       <mat-card-actions align="end">
         <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
