フリーブロック/フリー画像を消せるように

--- a/src/app/components/dashboard-image/dashboard-image.component.html
+++ b/src/app/components/dashboard-image/dashboard-image.component.html
@@ -3,6 +3,9 @@
 </p>
 <div *ngIf="fileUrl" class="image-container">
   <img [src]="fileUrl" alt="">
+  <button (click)="onChangeFile(null)" color="warn" mat-flat-button mat-icon-button type="button">
+    <mat-icon>close</mat-icon>
+  </button>
 </div>
 <p>
   <input #imageFileInput (change)="onChangeFile(imageFileInput.files)" name="image" type="file">
