--- a/src/app/modules/tenant/modules/tenant-free-image/components/tenant-free-image/tenant-free-image.component.html
+++ b/src/app/modules/tenant/modules/tenant-free-image/components/tenant-free-image/tenant-free-image.component.html
@@ -1,6 +1,7 @@
 <app-dashboard-header rightRouterLink="./create">フリー画像</app-dashboard-header>
 <app-table-list
   (clickRow)="onClickRow($event)"
+  (delete)="onDelete($event)"
   [dataSource]="list$"
   [displayedColumns]="columns"
   [getNameFn]="getNameFn"
