管理画面からの写メ日記管理

--- a/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
+++ b/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
@@ -100,6 +100,11 @@
         <div mat-line>デザイン</div>
       </mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item routerLink="/tenant/photo-diary">
+        <mat-icon mat-list-icon>photo_library</mat-icon>
+        <div mat-line>写メ日記の管理</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <!--      <mat-list-item routerLink="/tenant/layout/animation-banner">-->
       <!--        <mat-icon mat-list-icon>home_work</mat-icon>-->
       <!--        <div mat-line>動くバナー</div>-->
