--- a/src/app/components/table-list/table-list.component.scss
+++ b/src/app/components/table-list/table-list.component.scss
@@ -1,9 +1,15 @@
+.sortable {
+  height: 100%;
+  overflow: auto;
+}
+
 .col-image {
   height: 40px;
   width: 40px;
   object-fit: contain;
 }
-.col-image-stretch{
+
+.col-image-stretch {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -13,4 +19,16 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.sortable.cdk-drop-list-dragging mat-row:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.mat-column-sort, .mat-column-delete {
+  flex: 0 0 40px;
 }
