--- a/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
+++ b/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
@@ -122,7 +122,7 @@
       <div (click)="drawer.open()" *ngIf="!opened" class="space mat-elevation-z4">
         <mat-icon color="primary">widgets</mat-icon>
       </div>
-      <div class="router-container">
+      <div class="router-container" cdkScrollable>
         <router-outlet></router-outlet>
       </div>
     </div>
