--- a/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast/tenant-cast.component.html
+++ b/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast/tenant-cast.component.html
@@ -1,10 +1,13 @@
 <app-dashboard-header rightRouterLink="./create">キャスト</app-dashboard-header>
 <app-table-list
+  *ngIf="list$ | async as list"
   (clickRow)="onClickRow($event)"
   (delete)="onDelete($event)"
-  [dataSource]="list$"
+  [dataSource]="list"
   [displayedColumns]="columns"
   [getNameFn]="getNameFn"
+  [sortChangeable]="true"
+  (changeSort)="onSortChange($event, list)"
 ></app-table-list>
 <ng-template let-cast #recommend>
   <ng-container *ngIf="cast?.is_recommend ?? false; else: elseTemplate">
