--- a/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast/tenant-cast.component.html
+++ b/src/app/modules/tenant/modules/tenant-cast/components/tenant-cast/tenant-cast.component.html
@@ -1,19 +1,23 @@
 <app-dashboard-header rightRouterLink="./create">キャスト</app-dashboard-header>
 <app-table-list
-  *ngIf="list$ | async as list"
+  (changeSort)="onSortChange($event, list)"
   (clickRow)="onClickRow($event)"
   (delete)="onDelete($event)"
+  *ngIf="list$ | async as list"
   [dataSource]="list"
   [displayedColumns]="columns"
   [getNameFn]="getNameFn"
   [sortChangeable]="true"
-  (changeSort)="onSortChange($event, list)"
 ></app-table-list>
-<ng-template let-cast #recommend>
+<ng-template #recommend let-cast>
   <ng-container *ngIf="cast?.is_recommend ?? false; else: elseTemplate">
-    <button mat-icon-button mat-flat-button color="primary" (click)="onClickRecommend($event, cast)"><mat-icon>star</mat-icon></button>
+    <button (click)="onClickRecommend($event, cast)" color="primary" mat-flat-button mat-icon-button>
+      <mat-icon>star</mat-icon>
+    </button>
   </ng-container>
   <ng-template #elseTemplate>
-    <button mat-icon-button (click)="onClickRecommend($event, cast)"><mat-icon>star_outline</mat-icon></button>
+    <button (click)="onClickRecommend($event, cast)" mat-icon-button>
+      <mat-icon>star_outline</mat-icon>
+    </button>
   </ng-template>
 </ng-template>
