--- a/src/app/components/table-list/table-list.component.html
+++ b/src/app/components/table-list/table-list.component.html
@@ -1,16 +1,16 @@
 <div class="mat-elevation-z8">
   <mat-table
-    [dataSource]="dataSource"
-    mat-table
-    cdkDropList
     (cdkDropListDropped)="onDrop($event)"
     [cdkDropListDisabled]="!sortChangeable"
     [class.sortable]="sortChangeable"
+    [dataSource]="dataSource"
+    cdkDropList
+    mat-table
   >
     <ng-container *ngIf="sortChangeable" [matColumnDef]="'sort'">
       <mat-header-cell *matHeaderCellDef mat-header-cell></mat-header-cell>
       <mat-cell *matCellDef="let element" mat-cell>
-        <button mat-icon-button cdkDragHandle cdkDrag cdkDragRootElement="mat-row" [cdkDragData]="element">
+        <button [cdkDragData]="element" cdkDrag cdkDragHandle cdkDragRootElement="mat-row" mat-icon-button>
           <mat-icon>drag_handle</mat-icon>
         </button>
       </mat-cell>
@@ -24,19 +24,19 @@
             <ng-container *ngIf="getColumnAsBase(col) as col">
               <ng-container
                 *ngIf="col.transform ? col.transform(getDataByKeyName(element, col.key)) : getDataByKeyName(element, col.key) as text">
-                <div class="ellipsis" [matTooltip]="text">{{ text }}</div>
+                <div [matTooltip]="text" class="ellipsis">{{ text }}</div>
               </ng-container>
             </ng-container>
           </ng-container>
           <ng-container *ngSwitchCase="'image'">
             <ng-container *ngIf="getColumnAsBase(col) as col">
               <img
-                [src]="col.transform ? col.transform(getDataByKeyName(element, col.key)) : getDataByKeyName(element, col.key)"
-                alt=""
-                class="col-image"
                 #smallImage
                 (mouseenter)="onShowPreviewModal(imageTemplate, smallImage)"
                 (mouseleave)="onHidePreviewModal()"
+                [src]="col.transform ? col.transform(getDataByKeyName(element, col.key)) : getDataByKeyName(element, col.key)"
+                alt=""
+                class="col-image"
               >
               <ng-template #imageTemplate>
                 <img
