--- a/src/app/modules/cast/components/tenant-cast-dashboard-container/tenant-cast-dashboard-container.component.html
+++ b/src/app/modules/cast/components/tenant-cast-dashboard-container/tenant-cast-dashboard-container.component.html
@@ -4,7 +4,7 @@
       <h3 matSubheader> -- </h3>
       <mat-list-item routerLink="/tenant/basic">
         <mat-icon mat-list-icon>home_work</mat-icon>
-        <div mat-line> -- </div>
+        <div mat-line> --</div>
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item (click)="onClickLogOut()">
@@ -18,7 +18,7 @@
       <div (click)="drawer.open()" *ngIf="!opened" class="space mat-elevation-z4">
         <mat-icon color="primary">widgets</mat-icon>
       </div>
-      <div class="router-container" cdkScrollable>
+      <div cdkScrollable class="router-container">
         <router-outlet></router-outlet>
       </div>
     </div>
