--- a/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
+++ b/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
@@ -39,7 +39,7 @@
       <div (click)="drawer.open()" *ngIf="!opened" class="space mat-elevation-z4">
         <mat-icon color="primary">widgets</mat-icon>
       </div>
-      <div class="router-container" cdkScrollable>
+      <div cdkScrollable class="router-container">
         <router-outlet></router-outlet>
       </div>
     </div>
