--- a/src/app/components/dashboard-select/dashboard-select.component.html
+++ b/src/app/components/dashboard-select/dashboard-select.component.html
@@ -3,7 +3,7 @@
     <mat-label>
       <ng-content></ng-content>
     </mat-label>
-    <mat-select [formControl]="fc">
+    <mat-select [formControl]="fc" [required]="required">
       <mat-option *ngFor="let item of selects" [value]="item.value">{{ item.label }}</mat-option>
     </mat-select>
   </mat-form-field>
