--- a/src/app/components/dashboard-time-range-form/dashboard-time-range-form.component.html
+++ b/src/app/components/dashboard-time-range-form/dashboard-time-range-form.component.html
@@ -1,20 +1,38 @@
 <p>
-  <mat-checkbox [formControl]="open24h" *ngIf="enable24h">24時間{{ label }}</mat-checkbox>
+  <mat-checkbox *ngIf="enable24h" [formControl]="open24h">24時間{{ label }}</mat-checkbox>
 </p>
-<mat-grid-list [cols]="2" [rowHeight]="80">
-  <mat-grid-tile>
+<mat-grid-list [cols]="13" [gutterSize]="'10px'" [rowHeight]="80">
+  <mat-grid-tile [colspan]="3">
     <mat-form-field appearance="fill" hintLabel="">
-      <mat-label>{{ label }}開始時間</mat-label>
-      <mat-select [formControl]="openTime">
-        <mat-option *ngFor="let time of startTimeOptions" [value]="time">{{ time }}</mat-option>
+      <mat-label>{{ label }}開始時間（時）</mat-label>
+      <mat-select [formControl]="startTimeHour">
+        <mat-option *ngFor="let time of startHourOptions" [value]="time">{{ time }}</mat-option>
       </mat-select>
     </mat-form-field>
   </mat-grid-tile>
-  <mat-grid-tile>
+  <mat-grid-tile [colspan]="3">
     <mat-form-field appearance="fill" hintLabel="">
-      <mat-label>{{ label }}終了時間</mat-label>
-      <mat-select [formControl]="closeTime">
-        <mat-option *ngFor="let time of endTimeOptions" [value]="time">{{ time === '' ? 'ラスト' : time }}
+      <mat-label>{{ label }}開始時間（分）</mat-label>
+      <mat-select [formControl]="startTimeMinute">
+        <mat-option *ngFor="let time of startMinuteOptions" [value]="time">{{ time }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="1"></mat-grid-tile>
+  <mat-grid-tile [colspan]="3">
+    <mat-form-field appearance="fill" hintLabel="">
+      <mat-label>{{ label }}終了時間（時）</mat-label>
+      <mat-select [formControl]="endTimeHour">
+        <mat-option *ngFor="let time of endHourOptions" [value]="time">{{ time === '' ? 'ラスト' : time }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="3">
+    <mat-form-field appearance="fill" hintLabel="">
+      <mat-label>{{ label }}終了時間（分）</mat-label>
+      <mat-select [formControl]="endTimeMinute">
+        <mat-option *ngFor="let time of endMinuteOptions" [value]="time">{{ time }}
         </mat-option>
       </mat-select>
     </mat-form-field>
