--- a/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
+++ b/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
@@ -78,6 +78,12 @@
         <div mat-line>フリー画像</div>
       </mat-list-item>
       <mat-divider></mat-divider>
+      <h3 mat-subheader>イベントニュース</h3>
+      <mat-list-item routerLink="/tenant/event-news">
+        <mat-icon mat-list-icon>newspaper</mat-icon>
+        <div mat-line>イベントニュース</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <h3 mat-subheader>ランキング管理</h3>
       <mat-list-item routerLink="/tenant/ranking">
         <mat-icon mat-list-icon>home_work</mat-icon>
