--- a/src/app/components/dashboard-date-picker/dashboard-date-picker.component.html
+++ b/src/app/components/dashboard-date-picker/dashboard-date-picker.component.html
@@ -1,7 +1,9 @@
 <p>
   <mat-form-field appearance="fill">
-    <mat-label><ng-content></ng-content></mat-label>
-    <input matInput [name]="name" [formControl]="fc" [matDatepicker]="picker">
+    <mat-label>
+      <ng-content></ng-content>
+    </mat-label>
+    <input [required]="required" matInput [name]="name" [formControl]="fc" [matDatepicker]="picker">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
