--- a/src/app/modules/tenant/modules/tenant-basic/components/tenant-free-block-detail/tenant-free-block-detail.component.html
+++ b/src/app/modules/tenant/modules/tenant-basic/components/tenant-free-block-detail/tenant-free-block-detail.component.html
@@ -36,28 +36,16 @@
 
         <app-dashboard-image (changeFile)="onChangeFile($event)" [defaultUrl]="defaultFileUrl"></app-dashboard-image>
 
-        <app-dashboard-select
-          [selects]="textTypeSelects"
+        <app-dashboard-editable-text-type-select
           formControlName="editable_text_type_id"
-          label="表示形式"
           name="editable_text_type_id"
-        >
-          表示形式
-        </app-dashboard-select>
-
-        <app-dashboard-textarea
-          *ngIf="selectedTextType === 'plain'"
+          #ref
+        ></app-dashboard-editable-text-type-select>
+        <app-dashboard-multiple-type-textarea
           formControlName="content"
           name="content"
-        >
-          本文
-        </app-dashboard-textarea>
-
-        <app-dashboard-editor
-          *ngIf="selectedTextType === 'html'"
-          formControlName="content"
-        >本文
-        </app-dashboard-editor>
+          [ref]="ref"
+        ></app-dashboard-multiple-type-textarea>
 
 
         <app-dashboard-textarea
